crates/turborepo-integration-tests/tests/snapshots/run_continue__with_continue_dependencies_successful.snap
---
source: crates/turborepo-integration-tests/tests/run_continue.rs
expression: redact_continue_output(&result.combined_output())
---
• Packages in scope: base-lib, my-app, other-app, some-lib, yet-another-lib
• Running build in 5 packages
• Remote caching disabled
other-app:build: cache miss, executing [HASH]
other-app:build: 
other-app:build: > build
other-app:build: > exit 3
other-app:build: 
other-app:build: npm error Lifecycle script `build` failed with error:
other-app:build: npm error code 3
other-app:build: npm error path [TEMP_DIR]
other-app:build: npm error workspace other-app
other-app:build: npm error location [TEMP_DIR]
other-app:build: npm error command failed
other-app:build: npm error command [SHELL] exit 3
other-app:build: command finished with error, but continuing...
other-app#build: command ([PATH]) [NPM] run build exited (3)
some-lib:build: cache miss, executing [HASH]
some-lib:build: 
some-lib:build: > build
some-lib:build: > exit 2
some-lib:build: 
some-lib:build: npm error Lifecycle script `build` failed with error:
some-lib:build: npm error code 2
some-lib:build: npm error path [TEMP_DIR]
some-lib:build: npm error workspace some-lib
some-lib:build: npm error location [TEMP_DIR]
some-lib:build: npm error command failed
some-lib:build: npm error command [SHELL] exit 2
some-lib:build: command finished with error, but continuing...
some-lib#build: command ([PATH]) [NPM] run build exited (2)

 Tasks:    2 successful, 4 total
Cached:    2 cached, 4 total
  Time: [TIME] 
Failed:    other-app#build, some-lib#build

 WARNING  An issue occurred while attempting to parse [TEMP_DIR] Turborepo will still function, but some features may not be available:
   x Could not resolve workspaces.
  `-> Lockfile not found at [TEMP_DIR]

 ERROR  run failed: command  exited (3)
