crates/turborepo-integration-tests/tests/snapshots/run_continue__without_continue_errors_only.snap
---
source: crates/turborepo-integration-tests/tests/run_continue.rs
expression: redact_continue_output(&result.combined_output())
---
• Packages in scope: base-lib, my-app, some-lib
• Running build in 3 packages
• Remote caching disabled
some-lib:build: cache miss, executing [HASH]
some-lib:build: 
some-lib:build: > build
some-lib:build: > exit 2
some-lib:build: 
some-lib:build: npm error Lifecycle script `build` failed with error:
some-lib:build: npm error code 2
some-lib:build: npm error path [TEMP_DIR]
some-lib:build: npm error workspace some-lib
some-lib:build: npm error location [TEMP_DIR]
some-lib:build: npm error command failed
some-lib:build: npm error command [SHELL] exit 2
some-lib:build: ERROR: command finished with error: command ([PATH]) [NPM] run build exited (2)
some-lib#build: command ([PATH]) [NPM] run build exited (2)

 Tasks:    1 successful, 2 total
Cached:    1 cached, 2 total
  Time: [TIME] 
Failed:    some-lib#build

 ERROR  run failed: command  exited (2)
